fix:修正scrollbar ＣＳＳ

--- a/src/scss/customize/customizingComponents/layout.scss
+++ b/src/scss/customize/customizingComponents/layout.scss
@@ -131,6 +131,7 @@
   }
 }
 .app-sidebar {
+  overflow-y: scroll;
   .menu .menu-profile {
     .menu-profile-cover {
       background: unset;
@@ -141,7 +142,8 @@
       position: absolute;
       content: '';
       width: 100%;
-      height: 100vh;
+      height: 100%;
+      min-height: 100vh;
       background: url('/src/assets/login_bg_.png') bottom;
       background-size: cover;
       top: 0;
